--- a/.imwheelrc
+++ b/.imwheelrc
@@ -1,5 +1,9 @@
+#sudo apt install imwheel
+#run imwheel:     imwheel
+#stop imwheel:    imwheel kill
+
 ".*"
-None,      Up,   Button4, 4
+None,      Up,   Button4, 4  #mouse scroll speed，default is 3.
 None,      Down, Button5, 4
 Control_L, Up,   Control_L|Button4
 Control_L, Down, Control_L|Button5
