--- a/.imwheelrc
+++ b/.imwheelrc
@@ -1,10 +1,11 @@
 #sudo apt install imwheel
 #run imwheel:     imwheel
-#stop imwheel:    imwheel kill
+#restart imwheel:    imwheel --kill
 
-".*"
-None,      Up,   Button4, 4  #mouse scroll speed，default is 3.
-None,      Down, Button5, 4
+
+".*"                         #means this profile is valid to any procedures.
+None,      Up,   Button4, 3  #mouse scroll speed，default is 3.
+None,      Down, Button5, 3
 Control_L, Up,   Control_L|Button4
 Control_L, Down, Control_L|Button5
 Shift_L,   Up,   Shift_L|Button4
