--- a/.imwheelrc
+++ b/.imwheelrc
@@ -1,7 +1,7 @@
 #sudo apt install imwheel
 #run imwheel:     imwheel
 #restart imwheel:    imwheel --kill
-
+#可以加入开机启动
 
 ".*"                         #means this profile is valid to any procedures.
 None,      Up,   Button4, 3  #mouse scroll speed，default is 3.
